data/derived/fa15/progs/unify/prog4009.ml.out
Characters 120-123:
  then matchHeads (["b"])
                    ^^^
Error: This expression has type string but an expression was expected of type
         'a list
